fixed path to libraries dir in CMakeLists files

--- a/apply/CMakeLists.txt
+++ b/apply/CMakeLists.txt
@@ -15,11 +15,11 @@ endif()
 
 set (SRC src/main.cpp)
 
-include_directories(../libraries/linear/include)
-include_directories(../libraries/layers/include)
-include_directories(../libraries/dataset/include)
-include_directories(../libraries/common/include)
-include_directories(../libraries/utilities/include)
+include_directories(${CMAKE_SOURCE_DIR}/libraries/linear/include)
+include_directories(${CMAKE_SOURCE_DIR}/libraries/layers/include)
+include_directories(${CMAKE_SOURCE_DIR}/libraries/dataset/include)
+include_directories(${CMAKE_SOURCE_DIR}/libraries/common/include)
+include_directories(${CMAKE_SOURCE_DIR}/libraries/utilities/include)
 
 source_group("src" FILES ${SRC})
 
