--- a/compile/CMakeLists.txt
+++ b/compile/CMakeLists.txt
@@ -40,11 +40,11 @@ source_group("include" FILES ${INCLUDE})
 source_group("tcc" FILES ${TCC})
 
 include_directories(include)
-include_directories(../libraries/dataset/include)
-include_directories(../libraries/layers/include)
-include_directories(../libraries/linear/include)
-include_directories(../libraries/utilities/include)
-include_directories(../libraries/common/include)
+include_directories(${CMAKE_SOURCE_DIR}/libraries/dataset/include)
+include_directories(${CMAKE_SOURCE_DIR}/libraries/layers/include)
+include_directories(${CMAKE_SOURCE_DIR}/libraries/linear/include)
+include_directories(${CMAKE_SOURCE_DIR}/libraries/utilities/include)
+include_directories(${CMAKE_SOURCE_DIR}/libraries/common/include)
 
 # create executable in build\bin
 set (GLOBAL_BIN_DIR ${CMAKE_BINARY_DIR}/bin)
