--- a/libraries/dataset/CMakeLists.txt
+++ b/libraries/dataset/CMakeLists.txt
@@ -14,17 +14,15 @@ endif()
 
 set (SRC src/DenseDataVector.cpp
          src/OnesDataVector.cpp
-         src/RowDataset.cpp
          src/SequentialLineIterator.cpp
          src/SparseBinaryDataVector.cpp
          src/SparseDataVector.cpp
          src/SparseEntryParser.cpp
-         src/SupervisedExample.cpp
          src/ZeroDataVector.cpp)
 
 set (INCLUDE include/DataVectorBuilder.h
              include/DenseDataVector.h
-             include/IDataVector.h             
+             include/IDataVector.h
              include/MappedParser.h
              include/OnesDataVector.h
              include/ParsingIterator.h
@@ -41,8 +39,10 @@ set (TCC tcc/DataVectorBuilder.tcc
          tcc/DenseDataVector.tcc
          tcc/MappedParser.tcc
          tcc/ParsingIterator.tcc
+         tcc/RowDataset.tcc
          tcc/SparseBinaryDataVector.tcc
          tcc/SparseDataVector.tcc
+         tcc/SupervisedExample.tcc
          tcc/SupervisedExampleBuilder.tcc)
 
 source_group("src" FILES ${SRC})
