moved apply,compile,.print to tools/utilities

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,11 +31,11 @@ add_subdirectory(libraries/testing)
 add_subdirectory(libraries/trainers)
 add_subdirectory(libraries/treeLayout)
 add_subdirectory(libraries/utilities)
-add_subdirectory(apply)
-add_subdirectory(compile)
-add_subdirectory(print)
 add_subdirectory(tools/trainers/stochasticGradientDescent)
 add_subdirectory(tools/trainers/sortingTreeLearner)
+add_subdirectory(tools/utilities/apply)
+add_subdirectory(tools/utilities/compile)
+add_subdirectory(tools/utilities/print)
 add_subdirectory(scripts)
 
 # Add SWIG-generated interfaces
