--- a/tools/utilities/apply/CMakeLists.txt
+++ b/tools/utilities/apply/CMakeLists.txt
@@ -30,5 +30,5 @@ add_executable(${PROJ_NAME} ${SRC})
 
 target_link_libraries(${PROJ_NAME} utilities layers linear dataset common)
 
-set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "tools")
+set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "tools/utilities")
 
