--- a/tools/utilities/compile/CMakeLists.txt
+++ b/tools/utilities/compile/CMakeLists.txt
@@ -53,4 +53,4 @@ add_executable(${PROJ_NAME} ${SRC} ${INCLUDE} ${TCC})
 
 target_link_libraries(${PROJ_NAME} utilities layers linear common)
 
-set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "tools")
+set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "tools/utilities")
