--- a/tools/utilities/print/CMakeLists.txt
+++ b/tools/utilities/print/CMakeLists.txt
@@ -46,4 +46,4 @@ add_executable(${PROJ_NAME} ${SRC} ${INCLUDE})
 
 target_link_libraries(${PROJ_NAME} utilities layers common)
 
-set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "tools")
+set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "tools/utilities")
