--- a/tools/utilities/print/CMakeLists.txt
+++ b/tools/utilities/print/CMakeLists.txt
@@ -14,19 +14,23 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
 endif()
 
 set (SRC src/LayerLayout.cpp
+         src/PrintableBinaryOpLayer.cpp
          src/PrintableCoordinatewise.cpp
          src/PrintableLayer.cpp
          src/PrintableModel.cpp
          src/PrintableSum.cpp
+         src/PrintableUnaryOpLayer.cpp
          src/PrintArguments.cpp
          src/main.cpp
          src/SvgHelpers.cpp)
 
 set (INCLUDE include/LayerLayout.h
+             include/PrintableBinaryOpLayer.h
              include/PrintableCoordinatewise.h
              include/PrintableLayer.h
              include/PrintableModel.h
              include/PrintableSum.h
+             include/PrintableUnaryOpLayer.h
              include/PrintArguments.h
              include/SvgHelpers.h)
 
