--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ if(${SWIG_ENABLED} STREQUAL "ON")
     add_subdirectory(examples)
   
     # Make interface code be dependent on all libraries
-    add_dependencies(EMLL_common common dataset layers linear lossFunctions trainers predictors testing treeLayout utilities)
+    add_dependencies(EMLL_common common dataset features layers linear lossFunctions trainers predictors testing treeLayout utilities)
   else()
     message(WARNING "Couldn't find SWIG, skipping interface generation.")
   endif()
