Updated CMake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,9 @@ PROJECT(EMLL)
 
 # Define custom configuration types for VS
 if(CMAKE_CONFIGURATION_TYPES)
-  list(APPEND CMAKE_CONFIGURATION_TYPES Documentation)
-  list(REMOVE_DUPLICATES CMAKE_CONFIGURATION_TYPES)
+## TODO: Get conditional generator expressions to work in Visual Studio. Then re-enable the "Documentation" target.
+#  list(APPEND CMAKE_CONFIGURATION_TYPES Documentation)
+#  list(REMOVE_DUPLICATES CMAKE_CONFIGURATION_TYPES)
 
   # Copy important configuration info from Release config to new Documentation config  
   set(CMAKE_CXX_FLAGS_DOCUMENTATION ${CMAKE_CXX_FLAGS_RELEASE})
@@ -86,7 +87,7 @@ if(DOXYGEN_ENABLED)
     set (DOXYFILE_LOCATION "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile")
     add_custom_target(doxygen ALL
       COMMAND 
-# TODO: figure out why this conditional execution isn't working anymore --- it used to work in VS, but now I get an error
+# TODO: figure out why this conditional execution isn't working anymore --- it used to work in VS, but now it produces an error
 #      $<$<CONFIG:Documentation>:${DOXYGEN_EXECUTABLE} ${DOXYFILE_LOCATION}>
 #      $<$<NOT:$<CONFIG:Documentation>>:${CMAKE_COMMAND} -E echo "Only done in Documentation builds">
       COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE_LOCATION}
