--- a/tools/trainers/sortingTreeTrainer/CMakeLists.txt
+++ b/tools/trainers/sortingTreeTrainer/CMakeLists.txt
@@ -5,7 +5,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
 
 # define project
-set (PROJ_NAME sortingTreeLearner)
+set (PROJ_NAME sortingTreeTrainer)
 PROJECT(${PROJ_NAME})
 
 #enable C++11 in GCC, etc
@@ -13,10 +13,13 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/main.cpp)
+set (SRC src/main.cpp
+         src/ParsedSortingTreeTrainerArguments.cpp)
+
+set (INCLUDE include/ParsedSortingTreeTrainerArguments.h)
 
 source_group("src" FILES ${SRC})
-#source_group("include" FILES ${INCLUDE})
+source_group("include" FILES ${INCLUDE})
 
 include_directories(include)
 include_directories(../../../libraries/common/include)
