moved parsed version of trainer arguments to common

--- a/libraries/common/CMakeLists.txt
+++ b/libraries/common/CMakeLists.txt
@@ -20,6 +20,8 @@ set (SRC src/DataLoadArguments.cpp
          src/MapLoadArguments.cpp
          src/MapSaveArguments.cpp
          src/ModelLoadArguments.cpp
+         src/SGDIncrementalTrainerArguments.cpp
+         src/SortingTreeTrainerArguments.cpp
          src/TrainerArguments.cpp
 )
 
@@ -32,6 +34,8 @@ set (INCLUDE include/DataLoadArguments.h
              include/MapLoadArguments.h
              include/MapSaveArguments.h
              include/ModelLoadArguments.h
+             include/SGDIncrementalTrainerArguments.h
+             include/SortingTreeTrainerArguments.h
              include/TrainerArguments.h
 )
 
