--- a/tools/trainers/sgdTrainer/CMakeLists.txt
+++ b/tools/trainers/sgdTrainer/CMakeLists.txt
@@ -13,11 +13,9 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/main.cpp
-         src/ParsedSGDIncrementalTrainerArguments.cpp)
+set (SRC src/main.cpp)
 
-set (INCLUDE include/ParsedSGDIncrementalTrainerArguments.h
-             include/SGDArguments.h)
+set (INCLUDE include/SGDArguments.h)
 
 source_group("src" FILES ${SRC})
 source_group("include" FILES ${INCLUDE})
