--- a/tools/trainers/sortingTreeTrainer/CMakeLists.txt
+++ b/tools/trainers/sortingTreeTrainer/CMakeLists.txt
@@ -13,13 +13,10 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/main.cpp
-         src/ParsedSortingTreeTrainerArguments.cpp)
+set (SRC src/main.cpp)
 
-set (INCLUDE include/ParsedSortingTreeTrainerArguments.h)
 
 source_group("src" FILES ${SRC})
-source_group("include" FILES ${INCLUDE})
 
 include_directories(include)
 include_directories(../../../libraries/common/include)
