added executable for bagged trees cleanup added missing functions from EnsemblePredictor

--- a/libraries/common/CMakeLists.txt
+++ b/libraries/common/CMakeLists.txt
@@ -12,7 +12,8 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/DataLoadArguments.cpp
+set (SRC src/BaggingIncrementalTrainerArguments.cpp
+         src/DataLoadArguments.cpp
          src/DataSaveArguments.cpp
          src/DataLoaders.cpp
          src/LoadModel.cpp
@@ -26,7 +27,8 @@ set (SRC src/DataLoadArguments.cpp
          src/TrainerArguments.cpp
 )
 
-set (INCLUDE include/DataLoadArguments.h
+set (INCLUDE include/BaggingIncrementalTrainerArguments.h
+             include/DataLoadArguments.h
              include/DataSaveArguments.h
              include/DataLoaders.h
              include/LoadModel.h
