--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ add_subdirectory(libraries/treeLayout)
 add_subdirectory(libraries/utilities)
 add_subdirectory(tools/trainers/sgdTrainer)
 add_subdirectory(tools/trainers/sortingTreeTrainer)
+add_subdirectory(tools/trainers/baggedTreeTrainer)
 add_subdirectory(tools/utilities/apply)
 add_subdirectory(tools/utilities/compile)
 add_subdirectory(tools/utilities/print)
