--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ enable_testing()
 # Include cmake projects for libraries and executables
 add_subdirectory(libraries/common)
 add_subdirectory(libraries/dataset)
+add_subdirectory(libraries/evaluators)
 add_subdirectory(libraries/layers)
 add_subdirectory(libraries/linear)
 add_subdirectory(libraries/lossFunctions)
