Baked evaluator into multiepoch SGD

--- a/tools/trainers/baggedTreeTrainer/CMakeLists.txt
+++ b/tools/trainers/baggedTreeTrainer/CMakeLists.txt
@@ -24,6 +24,7 @@ include_directories(../../../libraries/layers/include)
 include_directories(../../../libraries/linear/include)
 include_directories(../../../libraries/lossFunctions/include)
 include_directories(../../../libraries/predictors/include)
+include_directories(../../../libraries/evaluators/include)
 include_directories(../../../libraries/trainers/include)
 include_directories(../../../libraries/utilities/include)
 
@@ -31,7 +32,7 @@ include_directories(../../../libraries/utilities/include)
 set (GLOBAL_BIN_DIR ${CMAKE_BINARY_DIR}/bin)
 set (EXECUTABLE_OUTPUT_PATH ${GLOBAL_BIN_DIR}) 
 add_executable(${PROJ_NAME} ${SRC} ${INCLUDE})
-target_link_libraries(${PROJ_NAME} common dataset layers linear lossFunctions predictors trainers utilities)
+target_link_libraries(${PROJ_NAME} common dataset layers linear lossFunctions predictors evaluators trainers utilities)
 
 # put this project in the trainers folder in the IDE 
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "tools/trainers")
