--- a/libraries/trainers/CMakeLists.txt
+++ b/libraries/trainers/CMakeLists.txt
@@ -35,6 +35,7 @@ include_directories(../linear/include)
 include_directories(../dataset/include)
 include_directories(../layers/include)
 include_directories(../predictors/include)
+include_directories(../evaluators/include)
 include_directories(../utilities/include)
 
 add_library(${PROJ_NAME} ${SRC} ${INCLUDE} ${TCC})
