Added mean feature

--- a/libraries/features/CMakeLists.txt
+++ b/libraries/features/CMakeLists.txt
@@ -12,15 +12,19 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (INCLUDE include/Feature.h
+set (INCLUDE include/BufferedFeature.h
+             include/Feature.h
              include/FeatureSet.h
              include/InputFeature.h
+             include/MeanFeature.h
              include/StringUtil.h
              include/MagnitudeFeature.h)
 
-set (SRC src/Feature.cpp
+set (SRC src/BufferedFeature.cpp
+         src/Feature.cpp
          src/FeatureSet.cpp
          src/InputFeature.cpp
+         src/MeanFeature.cpp
          src/StringUtil.cpp
          src/MagnitudeFeature.cpp)
 
